--- a/Chukwuemeka.html
+++ b/Chukwuemeka.html
@@ -31,11 +31,11 @@
                   foundations of strategy, and discover what’s behind the numbers
                   in <strong>financial statements</strong></em>.
      <ol>
-         <li>Economics</li>
-         <li>Econometrics</li>
-         <li>MacroEconomics</li>
-         <li>MicroEconomics</li>
-         <li>Statistics</li>
+         <li>Mathematical Economics</li>
+         <li>Econometric Science</li>
+         <li>MacroEconomic Analysis</li>
+         <li>MicroEconomic Analysis</li>
+         <li>Statistical Analysis</li>
 
      </ol>
 
