Added Some New Lines

--- a/Chukwuemeka.html
+++ b/Chukwuemeka.html
@@ -31,7 +31,7 @@
                   foundations of strategy, and discover what’s behind the numbers
                   in <strong>financial statements</strong></em>.
      <ol>
-         <li>Mathematical Economics</li>
+         <li>International Economics</li>
          <li>Econometric Science</li>
          <li>MacroEconomic Analysis</li>
          <li>MicroEconomic Analysis</li>
